Commit Message trial

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     src="Profile_Picture.jpeg" alt="Profile Picture"
     width = "300" height = "300"
     >
+     <!-- Test Change -->
     <!-- Unordered list for bullets. -->
     <ul>
         <li><p>Lesson 01: <a href="Lesson1.html">Assignment 1</a></p></li>
