--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
+<html lang="en"></html>
 <link rel="stylesheet" href="Styles.css">
 <script src="script.js"></script>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="A collection of assignments by Kennion Gubler for WDD 230. ">
