--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"></html>
 <link rel="stylesheet" href="Styles.css">
+</link>
 <script src="script.js"></script>
 <head>
+    <title>
+        WDD 230
+    </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="A collection of assignments by Kennion Gubler for WDD 230. ">
     <title>Kennion T. Gubler</title>
