--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </h1>
    <h2>
       WDD 230 Assignment Portal
-   </h2>
+   </h2> 
    <div class="line-1"></div>
    <img 
       id="profile_picture"
@@ -31,7 +31,7 @@
          <p>Lesson 01: <a href="Lesson01.html">Assignment 1</a></p>
       </li>
       <li>
-         <p>Lesson 02: <a href="Lesson02.html">Assignment 2</a></p>
+         <p>Lesson 02: <a href="/Users/kenniongubler/TheGuitarGuy-WDD-230/Lesson02/design-principles.html">Assignment 2</a></p>
       </li>
       <li>
          <p>Lesson 03: <a href="Lesson03.html">Assignment 3</a></p>
