--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <p>Lesson 01: <a href="Lesson01.html">Assignment 1</a></p>
       </li>
       <li>
-         <p>Lesson 02: <a href="/Users/kenniongubler/TheGuitarGuy-WDD-230/Lesson02/design-principles.html">Assignment 2</a></p>
+         <p>Lesson 02: <a href="http://127.0.0.1:5500/Lesson02/design-principles.html">Assignment 2</a></p>
       </li>
       <li>
          <p>Lesson 03: <a href="Lesson03.html">Assignment 3</a></p>
