--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel = "normalize" href = "normalize.css"
+   <link rel = "normalize" href = "normalize.css">
     <link rel="stylesheet" href="Styles.css">
     <script src="script.js"></script>
     <title>WDD 230 Assignments</title>
