--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -19,7 +19,7 @@
         <rect width = "100%" height = "200" style="fill:rgb(254, 23, 162);" />
      </svg>
     <h2>
-        Design Principles
+        Design Principles Document
     </h2>
     <h3>
         Kennion Gubler
