--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -12,7 +12,7 @@
     <script src="script.js"></script>
 
 
-    <title id = "design-title">Design Principles</title>
+    <title id = "design-title">W02 Assignment: Design Principles Document</title>
 </head>
 <body>
     <svg class = "rectangle" >
