Weather site plan done

--- a/Lesson03/target-audience.html
+++ b/Lesson03/target-audience.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="target-audience.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -68,5 +69,21 @@
                 Mary wants to find information about snow because she is planing on driving soon.
             </p>
     </div>
+
+    <footer>
+        <p id = "footer_paragraph">
+           © 2021 | Kennion T. Gubler | Idaho | <a href=" https://www.byui.edu/online" id = "footer-link">BYUI Online Learning</a>
+        </p>
+        <p id = "copyright_paragraph">
+           Last updated:
+           <script>
+               dateFunction();
+           </script>
+  
+        </p>
+        <svg class = "rectangle2">
+           <rect width = "100%" height = "200" style = "fill:#5c5b5f"/>
+        </svg>
+     </footer>
 </body>
 </html>
