--- a/Lesson03/color-scheme.html
+++ b/Lesson03/color-scheme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="colors.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -17,11 +18,33 @@
             </ul>
         </nav>
     </div>
-    <h1>
-        Color Palette
-    </h1>
+
     <div id = "wrapper">
+        <h1>
+            Color Palette
+        </h1>
         <img src="colors.png" alt="color pallette" id = "color-palette">
+        <p>
+            #0C120C is the background color<br>
+            #A19FA8 is the background color for the navbar<br>
+            #FFFFFF is the text color<br>
+            #16F3E8 is the color that appears when hovering over links<br>
+        </p>
     </div>
+    <footer>
+        <p id = "footer_paragraph">
+           © 2021 | Kennion T. Gubler | Idaho | <a href=" https://www.byui.edu/online" id = "footer-link">BYUI Online Learning</a>
+        </p>
+        <p id = "copyright_paragraph">
+           Last updated:
+           <script>
+               dateFunction();
+           </script>
+  
+        </p>
+        <svg class = "rectangle2">
+           <rect width = "100%" height = "200" style = "fill:#5c5b5f"/>
+        </svg>
+     </footer>
 </body>
 </html>
