--- a/Lesson03/index.html
+++ b/Lesson03/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
 <div id = "container">
@@ -29,6 +30,22 @@
 <p id = "domain-paragraph">
     I chose this domain because it was the company name, and it was available! It currently would cost $12 per year.
 </p>
+
+<footer>
+    <p id = "footer_paragraph">
+       © 2021 | Kennion T. Gubler | Idaho | <a href=" https://www.byui.edu/online" id = "footer-link">BYUI Online Learning</a>
+    </p>
+    <p id = "copyright_paragraph">
+       Last updated:
+       <script>
+           dateFunction();
+       </script>
+
+    </p>
+    <svg class = "rectangle2">
+       <rect width = "100%" height = "200" style = "fill:#5c5b5f"/>
+    </svg>
+ </footer>
     
 </body>
 </html>
