--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <p>Lesson 02: <a href="Lesson02/design-principles.html">Assignment 2</a></p>
       </li>
       <li>
-         <p>Lesson 03: <a href="Lesson03.html">Assignment 3</a></p>
+         <p>Lesson 03: <a href="Lesson03/index.html">Assignment 3</a></p>
       </li>
       <li>
          <p>Lesson 04: <a href="Lesson04.html">Assignment 4</a></p>
