--- a/Lesson03/typography.html
+++ b/Lesson03/typography.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="typography-styles.css">
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>Typography</title>
 </head>
 <body>
     <div id = "container">
