--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="Lesson04/nothing.js"></script>
+    <script src="script.js"></script>
     <title>Preston</title>
 </head>
 <body>
@@ -50,16 +50,19 @@
             Contact Information
         </div>
     </div>
+    <footer>
+        <p id = "footer_paragraph">
+           © Magellan Weather |Attributions|Kennion Gubler| <a href=" https://www.byui.edu/online" id = "footer-link">BYUI Online Learning</a>
+        </p>
+        <p id = "copyright_paragraph">
+           Last updated: <script>
+               dateFunction();
+           </script>
+        </p>
+        <svg class = "rectangle2">
+           <rect width = "100%" height = "200" style = "fill:#5c5b5f"/>
+        </svg>
+     </footer>
 
 </body>
-<script>
-    function myFunction() {
-      var x = document.getElementById("navbar");
-      if (x.style.display === "block"){
-        x.style.display = "none";
-      } else {
-        x.style.display = "block";
-      }
-    }
-    </script>
 </html>
