--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          <p>Lesson 03: <a href="Lesson03/index.html">Assignment 3</a></p>
       </li>
       <li>
-         <p>Lesson 04: <a href="Lesson04.html">Assignment 4</a></p>
+         <p>Lesson 04: <a href="Lesson04/preston-4.html">Assignment 4</a></p>
       </li>
       <li>
          <p>Lesson 05: <a href="Lesson05.html">Assignment 5</a></p>
