--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
          <p>Lesson 04: <a href="Lesson04/preston-4.html">Assignment 4</a></p>
       </li>
       <li>
-         <p>Lesson 05: <a href="Lesson05.html">Assignment 5</a></p>
+         <p>Lesson 05: <a href="Lesson05/preston-5.html">Assignment 5</a></p>
       </li>
       <li>
          <p>Lesson 06: <a href="Lesson06.html">Assignment 6</a></p>
