--- a/Lesson05/preston-5.html
+++ b/Lesson05/preston-5.html
@@ -36,7 +36,7 @@
             <ul id = "navbar">
                 <li class="item" id = "home"><a href="home.html">Home</a></li>
                 <li class="item" id = "preston-link"><a href="preston-4.html">Preston</a></li>
-                <li class="item"><a href="soda-springs.html">Soda Springs</a></li>
+                <li class="item"><a href="Lesson06/soda-springs.html">Soda Springs</a></li>
                 <li class="item"><a href="fish-haven.html">Fish Haven</a></li>
                 <li class="item"><a href="storm-center.html">Storm Center</a></li>
                 <li class="item"><a href="gallery.html">Gallery</a></li>
