--- a/Lesson05/preston-5.html
+++ b/Lesson05/preston-5.html
@@ -147,7 +147,7 @@
            </script>
         </p>
         <svg class = "rectangle2">
-           <rect width = "100%" height = "200" style = "fill:#5c5b5f"/>
+           <rect/>
         </svg>
      </footer>
 
