--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          <p>Lesson 05: <a href="Lesson05/preston-5.html">Assignment 5</a></p>
       </li>
       <li>
-         <p>Lesson 06: <a href="Lesson06.html">Assignment 6</a></p>
+         <p>Lesson 06: <a href="Lesson06/preston-6.html">Assignment 6</a></p>
       </li>
       <li>
          <p>Lesson 07: <a href="Lesson07.html">Assignment 7</a></p>
