--- a/Lesson06/preston-6.html
+++ b/Lesson06/preston-6.html
@@ -105,11 +105,7 @@
                 Article
             </h1>
             <p id = "article-paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Magna eget est lorem
+                Famous for the scenes of Napoleon Dynamite, Preston Idaho is surely a great place to visit!
                  ipsum dolor sit. Cras tincidunt lobortis feugiat vivamus. Proin fermentum leo vel orci porta non pulvinar
                   neque. Orci a scelerisque purus semper eget duis at tellus. Risus nullam eget felis eget nunc lobortis mattis
                    aliquam faucibus. Maecenas volutpat blandit aliquam etiam erat velit. Et netus et malesuada fames ac turpis 
