--- a/Lesson07/Team Activity/index.html
+++ b/Lesson07/Team Activity/index.html
@@ -16,63 +16,63 @@
           src="./images/loading.gif"
           data-src="./images/david-is-gorgeous.jpeg"
         />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-2">
         <img src="./images/david.jpg" " data-src="./images/david.jpg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-3">
         <img src="./images/loading.gif" data-src="./images/david-2.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-4">
         <img src="./images/loading.gif" data-src="./images/david-3.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-5">
         <img src="./images/loading.gif" data-src="./images/david-4.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-6">
         <img src="./images/loading.gif" data-src="./images/weather1.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-7">
         <img src="./images/loading.gif" data-src="./images/weather-2.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-8">
         <img src="./images/loading.gif" data-src="./images/weather-3.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-9">
         <img src="./images/loading.gif" data-src="./images/weather-5.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-10">
         <img src="./images/loading.gif" data-src="./images/weather-4.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-11">
         <img src="./images/loading.gif" data-src="./images/safari.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-12">
         <img src="./images/loading.gif" data-src="./images/weather-6.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-13">
         <img src="./images/loading.gif" data-src="./images/weather-7.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-14">
-        <img src="./images/loading.gif" data-src="./images/weather-8.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <img src="./images/ng.gif" data-src="./images/weather-8.jpeg" />
+        <figcaption></figcaption>
       </figure>
       <figure class="gallery-item item-15">
         <img src="./images/loading.gif" data-src="./images/weather-9.jpeg" />
-        <figcaption>placeholder</figcaption>
+        <figcaption></figcaption>
       </figure>
     </div>
   </body>
