lazy loading working

--- a/Lesson07/gallery/gallery-7.html
+++ b/Lesson07/gallery/gallery-7.html
@@ -9,7 +9,7 @@
     <title>Gallery</title>
 </head>
 <body>
-<!-- 
+
     <div id = "title-box">
         <img src="logo.png" alt="Magellan Weather Logo" id = "logo">
             <h1 id = "title-text">
@@ -25,9 +25,9 @@
         <button id = "menu-icon" onclick="myFunction()">
             &#9776
         </button>
-        <nav> -->
+        <nav>
             <!-- <a id = "menu-icon">&#9776;</a> -->
-            <!-- <ul id = "navbar">
+            <ul id = "navbar">
                 <li class="item" id = "home"><a href="home.html">Home</a></li>
                 <li class="item" id = "preston-link"><a href="preston-4.html">Preston</a></li>
                 <li class="item"><a href="Lesson06/soda-springs.html">Soda Springs</a></li>
@@ -39,34 +39,61 @@
     </div> 
     <h1 id = "title-gallery">
         Gallery
-    </h1> -->
+    </h1>
     <div id = "gallery">
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg"/>
+            <img src="lazy.gif" data-src="weather1.jpeg" class = "gallery-images"/>
+            <p class = "gallery-paragraph">
+                Lightning strikes in Toronto
+            </p>
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg"/>
+            <img src="lazy.gif" data-src="weather2.jpeg" class = "gallery-images"/>
+            <p class = "gallery-paragraph">
+                Sun rays through clouds
+            </p>
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg"/>`  
+            <img src="lazy.gif" data-src="weather3.jpeg" class = "gallery-images"/>` 
+            <p class = "gallery-paragraph">
+                Majestic deer standing in the trees
+            </p> 
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg"/>
+            <img src="lazy.gif" data-src="weather4.jpeg" class = "gallery-images"/>
+            <p class = "gallery-paragraph">
+                Tie dye clouds
+            </p>
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg"/>
+            <img src="lazy.gif" data-src="weather5.jpeg" class = "gallery-images"/>
+            <p class = "gallery-paragraph">
+                Rain in the city
+            </p>
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg" />
+            <img src="lazy.gif" data-src="weather6.jpeg" class = "gallery-images" />
+            <p class = "gallery-paragraph">
+                Droplets on glass
+            </p>
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg" />
+            <img src="lazy.gif" data-src="weather7.jpeg" class = "gallery-images" />
+            <p class = "gallery-paragraph">
+                From the heavens
+            </p>
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg" />
+            <img src="lazy.gif" data-src="weather8.jpeg" class = "gallery-images" />
+            <p class = "gallery-paragraph">
+                Just clouds...
+            </p>
         </picture>
         <picture>
-            <img src="lazy.gif" data-src="weather1.jpeg"  />`  
+            <img src="lazy.gif" data-src="weather9.jpeg" class = "gallery-images" />`  
+            <p class = "gallery-paragraph">
+                Rain falling
+            </p>
         </picture>
         
     </div>
