--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
          <p>Lesson 06: <a href="Lesson06/preston-6.html">Assignment 6</a></p>
       </li>
       <li>
-         <p>Lesson 07: <a href="Lesson07.html">Assignment 7</a></p>
+         <p>Lesson 07: <a href="Lesson07/gallery/gallery-7.html">Assignment 7</a></p>
       </li>
       <li>
-         <p>Lesson 08: <a href="Lesson08.html">Assignment 8</a></p>
+         <p>Lesson 07 Activity: <a href="Lesson07/lazyload/lazyload.html">Assignment 8</a></p>
       </li>
       <li>
          <p>Lesson 09: <a href="Lesson09.html">Assignment 9</a></p>
