--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <p>Lesson 07 Activity: <a href="Lesson07/lazyload/lazyload.html">Assignment 8</a></p>
       </li>
       <li>
-         <p>Lesson 09: <a href="Lesson09.html">Assignment 9</a></p>
+         <p>Lesson 08: <a href="Lesson08/stormcenter.html">Assignment 9</a></p>
       </li>
       <li>
          <p>Lesson 10: <a href="Lesson10.html">Assignment 10</a></p>
