--- a/Lesson08/stormcenter.html
+++ b/Lesson08/stormcenter.html
@@ -46,9 +46,9 @@
     </div> 
     <div class="form">
         <h2>Contact Information</h2>
-        <form>
+        <form action = "thank-you.html">
             <label>
-                <input type="text" name="field1" placeholder="Full Name" minlength="5" pattern="regexp" required/>
+                <input type="text" name="field1" placeholder="Full Name" minlength="5" pattern="regex" required/>
             </label>
             <label>
                 <input type="email" name="field2" placeholder="example@gmail.com" />
