--- a/Lesson08/stormcenter.html
+++ b/Lesson08/stormcenter.html
@@ -48,7 +48,7 @@
         <h2>Contact Information</h2>
         <form action = "thank-you.html">
             <label>
-                <input type="text" name="field1" placeholder="Full Name" minlength="5" pattern="regex" required/>
+                <input type="text" name="field1" placeholder="Full Name" minlength="5" required/>
             </label>
             <label>
                 <input type="email" name="field2" placeholder="example@gmail.com" />
