--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
          <p>Lesson 08: <a href="Lesson08/stormcenter.html">Assignment 9</a></p>
       </li>
       <li>
-         <p>Lesson 10: <a href="Lesson10.html">Assignment 10</a></p>
+         <p>Lesson 09 Activity: <a href="Lesson09/prophets.html">Assignment 10</a></p>
+      </li>
+      <li>
+         <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
+      </li>
+      <li>
+         <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
+      </li>
+      <li>
+         <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
       </li>
    </ul>
    <footer>
