--- a/Lesson06/preston-6.html
+++ b/Lesson06/preston-6.html
@@ -34,12 +34,12 @@
         <nav>
             <!-- <a id = "menu-icon">&#9776;</a> -->
             <ul id = "navbar">
-                <li class="item" id = "home"><a href="home.html">Home</a></li>
-                <li class="item" id = "preston-link"><a href="preston-4.html">Preston</a></li>
+                <li class="item" id = "home"><a href="../home.html">Home</a></li>
+                <li class="item" id = "preston-link"><a href="Lesson06/preston-6.html">Preston</a></li>
                 <li class="item"><a href="Lesson06/soda-springs.html">Soda Springs</a></li>
                 <li class="item"><a href="fish-haven.html">Fish Haven</a></li>
-                <li class="item"><a href="storm-center.html">Storm Center</a></li>
-                <li class="item"><a href="gallery.html">Gallery</a></li>
+                <li class="item"><a href="../stormcenter.html">Storm Center</a></li>
+                <li class="item"><a href="../gallery.html">Gallery</a></li>
             </ul>
         </nav>
     </div> 
