--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="style-index.css">
     <script src="script.js"></script>
     <title>WDD 230 Assignments</title>
     <meta charset="UTF-8">
@@ -58,7 +58,7 @@
          <p>Lesson 09 Activity: <a href="Lesson09/prophets.html">Assignment 10</a></p>
       </li>
       <li>
-         <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
+         <p>Lesson 09: <a href="home.html">Assignment 10</a></p>
       </li>
       <li>
          <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
