--- a/Lesson10/index.html
+++ b/Lesson10/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css" />
+
     <title>Weather Stuff</title>
   </head>
   <body>
-    <div id="current-temp">&deg; F</div>
+      <div>
+          <img src="sunset.png" alt="sunset image">
+        <h1>
+            Weather Today:
+        </h1>
+      <div id="current-temp">&deg; F</div>
+      </div>
+
   </body>
 </html>
