--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          <p>Lesson 09: <a href="home.html">Assignment 10</a></p>
       </li>
       <li>
-         <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
+         <p>Lesson 09: <a href="Lesson10/preston-10/preston-10.html">Assignment 10</a></p>
       </li>
       <li>
          <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
