--- a/gallery-7.html
+++ b/gallery-7.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="gallery.css" />
+    <script src="gallery.js" defer></script>
     <title>Gallery</title>
 </head>
 <body>
@@ -28,12 +28,12 @@
         <nav>
             <!-- <a id = "menu-icon">&#9776;</a> -->
             <ul id = "navbar">
-                <li class="item" id = "home"><a href="../home.html">Home</a></li>
-                <li class="item" id = "preston-link"><a href="Lesson06/preston-6.html">Preston</a></li>
-                <li class="item"><a href="Lesson06/soda-springs.html">Soda Springs</a></li>
-                <li class="item"><a href="fish-haven.html">Fish Haven</a></li>
-                <li class="item"><a href="../stormcenter.html">Storm Center</a></li>
-                <li class="item"><a href="Lesson07/gallery/gallery-7.html">Gallery</a></li>
+                <li class="item" id = "home"><a href="home.html">Home</a></li>
+                <li class="item" id = "preston-link"><a href="preston-10.html">Preston</a></li>
+                <li class="item" id = "soda-spings=link"><a href="sodasprings.html">Soda Springs</a></li>
+                <li class="item" id = "fish-haven-link"><a href="fishhaven.html">Fish Haven</a></li>
+                <li class="item" id = "storm-center-link"><a href="stormcenter.html">Storm Center</a></li>
+                <li class="item" id = "gallery-7-link"><a href="gallery-7.html">Gallery</a></li>
             </ul>
         </nav>
     </div> 
