--- a/home.html
+++ b/home.html
@@ -19,20 +19,14 @@
       <button id="menu-icon" onclick="myFunction()">&#9776;</button>
       <nav>
         <!-- <a id = "menu-icon">&#9776;</a> -->
-        <ul id="navbar">
-          <li class="item" id="home"><a href="home.html">Home</a></li>
-          <li class="item" id="preston-link">
-            <a href="Lesson06/preston-6.html">Preston</a>
-          </li>
-          <li class="item"><a href="sodasprings.html">Soda Springs</a></li>
-          <li class="item"><a href="fishhaven.html">Fish Haven</a></li>
-          <li class="item">
-            <a href="Lesson08/stormcenter.html">Storm Center</a>
-          </li>
-          <li class="item">
-            <a href="Lesson07/gallery/gallery-7.html">Gallery</a>
-          </li>
-        </ul>
+        <ul id = "navbar">
+          <li class="item" id = "home"><a href="home.html">Home</a></li>
+          <li class="item" id = "preston-link"><a href="preston-10.html">Preston</a></li>
+          <li class="item" id = "soda-spings=link"><a href="sodasprings.html">Soda Springs</a></li>
+          <li class="item" id = "fish-haven-link"><a href="fishhaven.html">Fish Haven</a></li>
+          <li class="item" id = "storm-center-link"><a href="stormcenter.html">Storm Center</a></li>
+          <li class="item" id = "gallery-7-link"><a href="gallery-7.html">Gallery</a></li>
+      </ul>
       </nav>
     </div>
     <header></header>
