--- a/index.html
+++ b/index.html
@@ -1,86 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style-index.css">
-    <script src="script.js"></script>
-    <title>WDD 230 Assignments</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="A collection of assignments by Kennion Gubler for WDD 230. ">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
 
-<body>
-   <svg class = "rectangle" >
-      <rect width = "100%" height = "200" style="fill:rgb(254, 23, 162);" />
-   </svg>
-   <h1>
-      Kennion Gubler
-   </h1>
-   <h2>
-      WDD 230 Assignment Portal
-   </h2> 
-   <div class="line-1"></div>
-   <img 
-      id="profile_picture"
-      src="Profile_Picture.jpeg" alt="Profile Picture"
-      width = "300" height = "300"
-      >
-   <!-- Test Change -->
-   <!-- Unordered list for bullets. -->
-   <ul>
-      <li>
-         <p>Lesson 01: <a href="Lesson01.html">Assignment 1</a></p>
-      </li>
-      <li>
-         <p>Lesson 02: <a href="Lesson02/design-principles.html">Assignment 2</a></p>
-      </li>
-      <li>
-         <p>Lesson 03: <a href="Lesson03/index.html">Assignment 3</a></p>
-      </li>
-      <li>
-         <p>Lesson 04: <a href="Lesson04/preston-4.html">Assignment 4</a></p>
-      </li>
-      <li>
-         <p>Lesson 05: <a href="Lesson05/preston-5.html">Assignment 5</a></p>
-      </li>
-      <li>
-         <p>Lesson 06: <a href="Lesson06/preston-6.html">Assignment 6</a></p>
-      </li>
-      <li>
-         <p>Lesson 07: <a href="Lesson07/gallery/gallery-7.html">Assignment 7</a></p>
-      </li>
-      <li>
-         <p>Lesson 07 Activity: <a href="Lesson07/lazyload/lazyload.html">Assignment 8</a></p>
-      </li>
-      <li>
-         <p>Lesson 08: <a href="Lesson08/stormcenter.html">Assignment 9</a></p>
-      </li>
-      <li>
-         <p>Lesson 09 Activity: <a href="Lesson09/prophets.html">Assignment 10</a></p>
-      </li>
-      <li>
-         <p>Lesson 09: <a href="home.html">Assignment 10</a></p>
-      </li>
-      <li>
-         <p>Lesson 09: <a href="Lesson10/preston-10/preston-10.html">Assignment 10</a></p>
-      </li>
-      <li>
-         <p>Lesson 09: <a href="Lesson09/prophets.html">Assignment 10</a></p>
-      </li>
-   </ul>
-   <footer>
-      <p id = "footer_paragraph">
-         © 2021 | Kennion T. Gubler | Idaho | <a href=" https://www.byui.edu/online">BYUI Online Learning</a>
-      </p>
-      <p id = "copyright_paragraph">
-         Last updated:
-         <script>
-             dateFunction();
-         </script>
+    <title>Weather Stuff</title>
+  </head>
+  <body>
+      <div>
+          <img src="sunset.png" alt="sunset image">
+        <h1>
+            Weather Today:
+        </h1>
+      <div id="current-temp">&deg; F</div>
+      </div>
 
-      </p>
-      <svg class = "rectangle2">
-         <rect width = "100%" height = "200" style = "fill:rgb(254, 23, 162)"/>
-      </svg>
-   </footer>
-</body>
+  </body>
 </html>
