--- a/fishhaven.html
+++ b/fishhaven.html
@@ -46,9 +46,9 @@
     <div id = "preston-box">
         <div id = "contentbox">
             <picture>
-                <source srcset="preston-hero-large.jpeg" media="(min-width: 1200px)" />
-                <source srcset="preston-hero-medium.jpeg" media="(min-width: 400px)" />
-                <img src="preston-hero-small.jpeg" id = "preston-hero"/>
+                <source srcset="fish-haven-hero.jpeg" media="(min-width: 1200px)" />
+                <source srcset="fish-haven-hero.jpeg" media="(min-width: 400px)" />
+                <img src="fish-haven-hero.jpeg" id = "preston-hero"/>
 
                 <!-- <img src="preston-hero-small.jpeg" 
                 srcset="preston-hero-small.jpeg 400w, 
