--- a/sodasprings.html
+++ b/sodasprings.html
@@ -46,9 +46,9 @@
     <div id = "preston-box">
         <div id = "contentbox">
             <picture>
-                <source srcset="preston-hero-large.jpeg" media="(min-width: 1200px)" />
-                <source srcset="preston-hero-medium.jpeg" media="(min-width: 400px)" />
-                <img src="preston-hero-small.jpeg" id = "preston-hero"/>
+                <source srcset="soda-springs-hero.jpeg" media="(min-width: 1200px)" />
+                <source srcset="soda-springs-hero.jpeg" media="(min-width: 400px)" />
+                <img src="soda-springs-hero.jpeg" id = "preston-hero"/>
 
                 <!-- <img src="preston-hero-small.jpeg" 
                 srcset="preston-hero-small.jpeg 400w, 
@@ -93,11 +93,7 @@
                 Article
             </h1>
             <p id = "article-paragraph">
-                Famous for the scenes of Napoleon Dynamite, Preston Idaho is surely a great place to visit!
-                 ipsum dolor sit. Cras tincidunt lobortis feugiat vivamus. Proin fermentum leo vel orci porta non pulvinar
-                  neque. Orci a scelerisque purus semper eget duis at tellus. Risus nullam eget felis eget nunc lobortis mattis
-                   aliquam faucibus. Maecenas volutpat blandit aliquam etiam erat velit. Et netus et malesuada fames ac turpis 
-                   egestas maecenas. Nunc lobortis mattis aliquam faucibus purus in massa. Ultrices vitae auctor eu augue ut lectus 
+                Soda Springs is a wonderful place to visit. I don't know too much about it, but I am sure it is worth a visit or maybe not! Nunc lobortis mattis aliquam faucibus purus in massa. Ultrices vitae auctor eu augue ut lectus 
                    arcu bibendum. Vel turpis nunc eget lorem dolor sed viverra ipsum. Vitae congue eu consequat ac felis. Urna et pharetra 
                    pharetra massa. Morbi tristique senectus et netus. Tellus id interdum velit laoreet id. Cursus turpis massa tincidunt 
                    dui ut ornare. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat.Lorem ipsum 
