--- a/preston-10.html
+++ b/preston-10.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="preston.css">
     <title>Preston</title>
-    <script src="script.js"></script>
+    <script src="preston.js"></script>
 </head>
 <body>
 
