--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
       <li>
          <p>Lesson 12 (Final Weather Site): <a href="preston-10.html">Assignment 13</a></p>
       </li>
+      <li>
+         <p>Lesson 12 Activity: <a href="Lesson12/start_here/index.html">Assignment 14</a></p>
+      </li>
    </ul>
    <footer>
       <p id = "footer_paragraph">
