--- a/Final Project/home.html
+++ b/Final Project/home.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+    <nav>
+        <ul id = "navbar">
+                <li class="item" id = "home"><a href="home.html">Home</a></li>
+                <li class="item" id = "preston-link"><a href="preston-10.html">Preston</a></li>
+                <li class="item" id = "soda-spings=link"><a href="sodasprings.html">Soda Springs</a></li>
+                <li class="item" id = "fish-haven-link"><a href="fishhaven.html">Fish Haven</a></li>
+                <li class="item" id = "storm-center-link"><a href="stormcenter.html">Storm Center</a></li>
+                <li class="item" id = "gallery-7-link"><a href="gallery-7.html">Gallery</a></li>
+        </ul>
+    </nav>
+    </div> 
 </body>
 </html>
