--- a/Final/animals.html
+++ b/Final/animals.html
@@ -21,7 +21,7 @@
               </div>
                 <li class="item" id = "home"><a href="home.html">Home &#8964;</a></li>
                 <li class="item" id = "preston-link"><a href="animals.html">Animals &#8964;</a></li>
-                <li class="item" id = "soda-spings=link"><a href="sodasprings.html">Support &#8964;</a></li>
+                <li class="item" id = "soda-spings=link"><a href="support.html">Support &#8964;</a></li>
                 <li class="item" id = "storm-center-link"><a href="visit.html">Plan a Visit &#8964;</a></li>
             </ul>
         </nav>
@@ -33,58 +33,71 @@
         <picture>
             <img src="bear.jpeg" data-src="weather1.jpeg" class = "gallery-images"/>
             <p class = "gallery-paragraph">
-                Lightning strikes in Toronto
+                Majestic bear
             </p>
         </picture>
         <picture>
             <img src="giraffe.jpeg" data-src="weather2.jpeg" class = "gallery-images"/>
             <p class = "gallery-paragraph">
-                Sun rays through clouds
+                Two Giraffes on the savannah
             </p>
         </picture>
         <picture>
             <img src="gorilla.jpeg" data-src="weather3.jpeg" class = "gallery-images"/>` 
             <p class = "gallery-paragraph">
-                Majestic deer standing in the trees
+                Gorilla in the bush
             </p> 
         </picture>
         <picture>
             <img src="jaguar.jpeg" data-src="weather4.jpeg" class = "gallery-images"/>
             <p class = "gallery-paragraph">
-                Tie dye clouds
+                Jaguar ready to pounce
             </p>
         </picture>
         <picture>
             <img src="lemur.jpeg" data-src="weather5.jpeg" class = "gallery-images"/>
             <p class = "gallery-paragraph">
-                Rain in the city
+                Lemur 
             </p>
         </picture>
         <picture>
             <img src="bison.jpeg" data-src="weather6.jpeg" class = "gallery-images" />
             <p class = "gallery-paragraph">
-                Droplets on glass
+                Two Buffalo in tall grass
             </p>
         </picture>
         <picture>
             <img src="moose.jpeg" data-src="weather7.jpeg" class = "gallery-images" />
             <p class = "gallery-paragraph">
-                From the heavens
+                Moose in Targhee
             </p>
         </picture>
         <picture>
             <img src="panda.jpeg" data-src="weather8.jpeg" class = "gallery-images" />
             <p class = "gallery-paragraph">
-                Just clouds...
+                Panda being cool
             </p>
         </picture>
         <picture>
             <img src="rhino.jpeg" data-src="weather9.jpeg" class = "gallery-images" />`  
             <p class = "gallery-paragraph">
-                Rain falling
+                Rhino in the desert
             </p>
         </picture>
         
     </div>
+    <footer>
+        <p id = "footer_paragraph">
+           © Kennion Gubler |Attributions|Kennion Gubler| <a href=" https://www.byui.edu/online" id = "footer-link">BYUI Online Learning</a>
+        </p>
+        <p id = "copyright_paragraph">
+           <script>
+               dateFunction();
+           </script>
+        </p>
+        <svg class = "rectangle2">
+           <rect/>
+        </svg>
+     </footer>
 </body>
 </html>
