--- a/Final/visit.html
+++ b/Final/visit.html
@@ -9,8 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <div id = "container">
+
         <button id = "menu-icon" onclick="myFunction()">
             &#9776
         </button>
@@ -22,13 +21,25 @@
               </div>
                 <li class="item" id = "home"><a href="home.html">Home &#8964;</a></li>
                 <li class="item" id = "preston-link"><a href="animals.html">Animals &#8964;</a></li>
-                <li class="item" id = "soda-spings=link"><a href="sodasprings.html">Support &#8964;</a></li>
+                <li class="item" id = "soda-spings=link"><a href="support.html">Support &#8964;</a></li>
                 <li class="item" id = "storm-center-link"><a href="visit.html">Plan a Visit &#8964;</a></li>
             </ul>
         </nav>
-    </div> 
     <div id = "container">
         <img src="map.png" alt="map of SF Zoo" id = "map">
     </div>
+    <footer>
+        <p id = "footer_paragraph">
+           © Kennion Gubler |Attributions|Kennion Gubler| <a href=" https://www.byui.edu/online" id = "footer-link">BYUI Online Learning</a>
+        </p>
+        <p id = "copyright_paragraph">
+           <script>
+               dateFunction();
+           </script>
+        </p>
+        <svg class = "rectangle2">
+           <rect/>
+        </svg>
+     </footer>
 </body>
 </html>
