--- a/Final/home.html
+++ b/Final/home.html
@@ -22,7 +22,7 @@
               </div>
                 <li class="item" id = "home"><a href="home.html">Home &#8964;</a></li>
                 <li class="item" id = "preston-link"><a href="animals.html">Animals &#8964;</a></li>
-                <li class="item" id = "soda-spings=link"><a href="sodasprings.html">Support &#8964;</a></li>
+                <li class="item" id = "soda-spings=link"><a href="support.html">Support &#8964;</a></li>
                 <li class="item" id = "storm-center-link"><a href="visit.html">Plan a Visit &#8964;</a></li>
 
             </ul>
