--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
       <li>
          <p>Lesson 12 Activity: <a href="Lesson12/start_here/index.html">Assignment 14</a></p>
       </li>
+      <li>
+         <p>Final (SF Zoo Project) <a href="Final/home.html">Assignment 15</a></p>
+      </li>
    </ul>
    <footer>
       <p id = "footer_paragraph">
