--- a/Final/visit.html
+++ b/Final/visit.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="visit.css">
     <script src="visit.js"></script>
-    <title>Document</title>
+    <title>Plan a Visit</title>
 </head>
 <body>
 
