--- a/Final/animals.html
+++ b/Final/animals.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="animals.css">
     <script src="animals.js"></script>
-    <title>Document</title>
+    <title>Animals</title>
 </head>
 <body>
     <div id = "container">
